--- a/index.html
+++ b/index.html
@@ -50,119 +50,120 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <a class="btn button_di-buffala" href="#">Conoce Más</a>
   </header>
+  <main class="container">
+    <!-- Blog -->
+    <section class="container-fluid blog">
+      <div class="row">
+        <div class="blog__inner col-md-6">
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.</p>
+          <a class="btn button_di-buffala" href="#">Ver blog</a>
+        </div>
+        <div class="blog__inner blog__inner_background col-md-6"></div>
+      </div>
+    </section>
 
-  <!-- Blog -->
-  <section class="container-fluid blog">
-    <div class="row">
-      <div class="blog__inner col-md-6">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.</p>
-        <a class="btn button_di-buffala" href="#">Ver blog</a>
-      </div>
-      <div class="blog__inner blog__inner_background col-md-6"></div>
-    </div>
-  </section>
-
-  <!-- Features -->
-  <section class="container-fluid features">
-    <h1>Hola que tal </h1>
-    <h2>Lorem ipsum dolor sit</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus. Nunc varius ullamcorper felis. Nulla nibh ipsum, rutrum.</p>
-    <div class="row">
-      <div class="col-lg-4 col-md-6 ">
-        <div class="features__inner">
-          <div class="features__inner-icon">
-            <i class="fas fa-exchange-alt"></i>
-          </div>
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="features__inner">
-          <div class="features__inner-icon">
-             <i class="far fa-smile"></i>
-          </div>
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="features__inner">
-          <div class="features__inner-icon">
-            <i class="fas fa-suitcase"></i>
-          </div>
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="features__inner">
-          <div class="features__inner-icon">
-            <i class="fas fa-user"></i>
-          </div>
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="features__inner">
-          <div class="features__inner-icon">
-            <i class="fas fa-recycle"></i>
-          </div>
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="features__inner">
-          <div class="features__inner-icon">
-            <i class="fa far fa-thumbs-up"></i>
-          </div>
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Video -->
-  <section class="embed-responsive embed-responsive-16by9 video">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZGn8kSV9gAA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    <div class="video__inner">
-      <h2>Nuestros Exitos</h2>
+    <!-- Features -->
+    <section class="container-fluid features">
+      <h1>Hola que tal </h1>
+      <h2>Lorem ipsum dolor sit</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus. Nunc varius ullamcorper felis. Nulla nibh ipsum, rutrum.</p>
-    </div>
-  </section>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 ">
+          <div class="features__inner">
+            <div class="features__inner-icon">
+              <i class="fas fa-exchange-alt"></i>
+            </div>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="features__inner">
+            <div class="features__inner-icon">
+              <i class="far fa-smile"></i>
+            </div>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="features__inner">
+            <div class="features__inner-icon">
+              <i class="fas fa-suitcase"></i>
+            </div>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="features__inner">
+            <div class="features__inner-icon">
+              <i class="fas fa-user"></i>
+            </div>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="features__inner">
+            <div class="features__inner-icon">
+              <i class="fas fa-recycle"></i>
+            </div>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="features__inner">
+            <div class="features__inner-icon">
+              <i class="fa far fa-thumbs-up"></i>
+            </div>
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <!-- Portfolio section -->
-  <section class="container-fluid portfolio">
-    <h2>Trabajos Destacados</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus. Nunc varius ullamcorper felis. Nulla nibh ipsum, rutrum.</p>
-    <hr>
-    <div class="row">
-      <div class="portfolio__inner col-md-6">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.</p>
-        <a class="btn button_di-buffala" href="#">Ver trabajo</a>
+    <!-- Video -->
+    <section class="embed-responsive embed-responsive-16by9 video">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZGn8kSV9gAA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <div class="video__inner">
+        <h2>Nuestros Exitos</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus. Nunc varius ullamcorper felis. Nulla nibh ipsum, rutrum.</p>
       </div>
-      <div class="portfolio__inner portfolio__inner__image-top col-md-6"></div>
+    </section>
 
-      <div class="portfolio__inner portfolio__inner__image-middle col-md-6"></div>
-      <div class="portfolio__inner col-md-6">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.</p>
-        <a class="btn button_di-buffala" href="#">Ver trabajo</a>
-      </div>
+    <!-- Portfolio section -->
+    <section class="container-fluid portfolio">
+      <h2>Trabajos Destacados</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus. Nunc varius ullamcorper felis. Nulla nibh ipsum, rutrum.</p>
+      <hr>
+      <div class="row">
+        <div class="portfolio__inner col-md-6">
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.</p>
+          <a class="btn button_di-buffala" href="#">Ver trabajo</a>
+        </div>
+        <div class="portfolio__inner portfolio__inner__image-top col-md-6"></div>
 
-      <div class="portfolio__inner col-md-6">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.</p>
-        <a class="btn button_di-buffala" href="#">Ver trabajo</a>
-      </div>
-      <div class="portfolio__inner portfolio__inner__image-bottom col-md-6"></div>
-      </div>
-  </section>
+        <div class="portfolio__inner portfolio__inner__image-middle col-md-6"></div>
+        <div class="portfolio__inner col-md-6">
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.</p>
+          <a class="btn button_di-buffala" href="#">Ver trabajo</a>
+        </div>
+
+        <div class="portfolio__inner col-md-6">
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.</p>
+          <a class="btn button_di-buffala" href="#">Ver trabajo</a>
+        </div>
+        <div class="portfolio__inner portfolio__inner__image-bottom col-md-6"></div>
+        </div>
+    </section>
+  </main>  
 <!-- hola -->
   <!-- Footer -->
   <footer class="footer_di-buffala">
